modify codes to read mist2.2 (feh>0.0 ignored for now, thus, nz=10)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .DS_Store
 nr
 SPECTRA/CKC14/*
+SPECTRA/C3K/*
 OUTPUTS/*
 CodeToDo.txt
 runsps.f90
@@ -11,3 +12,6 @@ metalml.f90
 colorteff.f90
 bytype.f90
 Makefile.prv
+ISOCHRONES/MIST/*.sh
+ISOCHRONES/MIST/*afe*
+ISOCHRONES/MIST/v2
